FEDERATE-73 fixing code issues found by FindBugs.